# oracle-binance-rs

./: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
proto/: book_ticker.proto  order_book.proto  trade.proto
resources/: config.toml
src/: config.rs  main.rs
src/adapters/: book_ticker_api.rs  mod.rs  order_book_api.rs  rest_api.rs  trade_history_rest.rs
src/adapters/proto/: book_ticker_proto.rs  book_ticker_proto_service.rs  mod.rs  order_book_proto.rs  order_book_proto_service.rs  trade_history_proto.rs  trade_history_proto_service.rs
src/adapters/rest/: book_ticker_api.rs  mod.rs  order_book_api.rs  service_error.rs  trade_history_rest.rs
src/core/: book_ticker_service.rs  mod.rs  order_book_service.rs  trade_history_service.rs
src/domain/: book_ticker.rs  mod.rs  order_book.rs  order_book_stream_data.rs  stream_data.rs  trade.rs
src/domain/entities/: mod.rs  order_book.rs  trade.rs
src/domain/services/: book_ticker_service.rs  mod.rs  order_book_service.rs  trade_history_service.rs
src/ports/: mod.rs  ws_client_book_ticker.rs  ws_client_order_book.rs  ws_client_trade.rs
