[package]
name = "oracle-binance"
version = "0.1.0"
edition = "2021"

[dependencies]
binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust.git", features = ["enable-tokio-tungstenite"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
ordered-float = "3.5"
once_cell = "1.10"
warp = "0.3"