[package]
name = "oracle_binance"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
binance_spot_connector_rust = { git = "https://github.com/binance/binance-spot-connector-rust.git", features = ["enable-tokio-tungstenite"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
config = "0.11"
ordered-float = "3.5"
once_cell = "1.10"
warp = "0.3"
rand = "0.8.5"
tonic = "0.12.2"
prost = "0.13.2"
tonic-reflection = "0.6.0"
[build-dependencies]
tonic-build = "0.12.2"
[dev-dependencies]
mockall = "0.13.0"


[[bin]]
name = "oracle_binance"
path = "src/main.rs"